--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+Saved/Logs/ProjectCats.log
+Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
