Mainmenu + soundmenu + SaveGame

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,9 +175,11 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/Cats/Map/StartingScreen
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -322,14 +324,39 @@ SoundNodeWavePlayer="\"Object\" "
 SoundNodeAssetReferencer="\"Object\" "
 SoundNode="\"Object\" "
 SoundNodeRandom="\"Object\" \"Object.Random.Weights\" "
+Border="\"Object\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
+Menu_C="\"Object\" "
+UserWidget="\"Object\" "
+Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Texture2D="\"Object\" "
+Texture="\"Object\" "
+StreamableRenderAsset="\"Object\" "
+ExpandableArea="\"Object\" "
+VerticalBox="\"Object\" "
+Overlay="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+SoundMenu_C="\"Object\" "
+Slider="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.NormalThumbImage\" \"Object.Style.WidgetStyle.NormalThumbImage.ImageSize\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+MainMenu_C="\"Object\" "
+SaveGame_C="\"Object\" "
+SaveGame="\"Object\" "
+CatsSaveGame_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/Cats/Assets/Sound/miaou_Cue.miaou_Cue
-OpenAssetsAtExit=/Game/Cats/Assets/Sound/miaouCourt.miaouCourt
+OpenAssetsAtExit=/Game/Cats/Widget/SoundMenu.SoundMenu
+OpenAssetsAtExit=/Game/Cats/Blueprint/SaveGame.SaveGame
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Cats/Assets/Sound/miaou_RACvkaU.miaou_RACvkaU
+OpenAssetsAtExit=/Game/Cats/Widget/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/Cats/Map/StartingScreen.StartingScreen:PersistentLevel.StartingScreen
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1399,7 +1426,8 @@ LastDirectory=
 RecentsFiles=C:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem0=/Game/Cats/Map/StartingScreen
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -1408,6 +1436,8 @@ bUseUnsortedMenus=False
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou
 InputAction=
+WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2053,6 +2083,230 @@ EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 SoundNodeWavePlayer.WavePlayer=True
 SoundNodeRandom.Random=True
+Cat_C.Default=True
+Border.Content=True
+Border.Appearance=False
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+Menu_C.Appearance=True
+Menu_C.Input=True
+Menu_C.Interaction=True
+Menu_C.Designer=True
+Menu_C.Performance=True
+Menu_C.Layout=True
+Menu_C.Behavior=True
+Menu_C.Render Transform=True
+Menu_C.Localization=True
+Menu_C.Accessibility=True
+Menu_C.Clipping=True
+Menu_C.Navigation=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=False
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+CanvasPanel.Layout=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+Border.Layout=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Clipping=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compression=True
+Texture2D.Interchange =True
+Texture2D.Texture=True
+Texture2D.Adjustments=True
+Texture2D.File Path=True
+Texture2D.Compositing=True
+ExpandableArea.Layout=True
+ExpandableArea.Style=True
+ExpandableArea.Expansion=True
+ExpandableArea.Accessibility=True
+ExpandableArea.Behavior=True
+ExpandableArea.Render Transform=True
+ExpandableArea.Performance=True
+ExpandableArea.Clipping=True
+ExpandableArea.Navigation=True
+ExpandableArea.Localization=True
+ExpandableArea.Events=True
+Widget.Layout=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Clipping=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Accessibility=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+Overlay.Localization=True
+PropertyWrapper.Events=True
+WorldSettings.HLODSystem=True
+StartingScreenGameMode_C.Tick=True
+StartingScreenGameMode_C.Classes=True
+StartingScreenGameMode_C.Game=True
+StartingScreenGameMode_C.GameMode=True
+StartingScreenGameMode_C.Physics=True
+StartingScreenGameMode_C.Events=True
+PlayerCameraManager.TransformCommon=True
+PlayerCameraManager.Rendering=True
+PlayerCameraManager.Physics=True
+PlayerCameraManager.Tags=True
+PlayerCameraManager.Activation=True
+PlayerCameraManager.Collision=True
+PlayerCameraManager.Cooking=True
+PlayerCameraManager.PlayerCameraManager=True
+PlayerCameraManager.Debug=True
+PlayerCameraManager.Replication=True
+PlayerCameraManager.HLOD=True
+PlayerCameraManager.Networking=True
+PlayerCameraManager.Input=True
+PlayerCameraManager.Actor=True
+PlayerController.TransformCommon=True
+PlayerController.PlayerController=True
+PlayerController.MouseInterface=True
+PlayerController.Game=True
+PlayerController.Input=True
+PlayerController.WorldPartition=True
+PlayerController.Replication=True
+PlayerController.HLOD=True
+PlayerController.Physics=True
+PlayerController.Networking=True
+PlayerController.Actor=True
+PlayerStartPIE.TransformCommon=True
+PlayerStartPIE.Object=True
+PlayerStartPIE.Rendering=True
+PlayerStartPIE.Replication=True
+PlayerStartPIE.HLOD=True
+PlayerStartPIE.Physics=True
+PlayerStartPIE.Networking=True
+PlayerStartPIE.Input=True
+PlayerStartPIE.Actor=True
+PlayerState.Replication=True
+PlayerState.Physics=True
+PlayerState.Networking=True
+PlayerState.Actor=True
+StartingScreenGameMode_C.TransformCommon=True
+StartingScreenGameMode_C.Networking=True
+ParticleEventManager.Rendering=True
+ParticleEventManager.Replication=True
+ParticleEventManager.Collision=True
+ParticleEventManager.HLOD=True
+ParticleEventManager.Physics=True
+ParticleEventManager.Networking=True
+ParticleEventManager.Input=True
+ParticleEventManager.Actor=True
+HUD.HUD=True
+HUD.Collision=True
+HUD.HLOD=True
+HUD.Physics=True
+HUD.Networking=True
+StartingScreen_C.Tick=True
+StartingScreen_C.Replication=True
+StartingScreen_C.Actor=True
+StartingScreen_C.Input=True
+StartingScreen_C.HLOD=True
+StartingScreen_C.Physics=True
+StartingScreen_C.WorldPartition=True
+StartingScreen_C.Events=True
+K2Node_VariableSet.Events=True
+Slider.Layout=True
+Slider.Appearance=True
+Slider.Style=True
+Slider.Accessibility=True
+Slider.Interaction=True
+Slider.Behavior=True
+Slider.Render Transform=True
+Slider.Performance=True
+Slider.Clipping=True
+Slider.Navigation=True
+Slider.Localization=True
+Slider.Events=True
+MainMenu_C.Appearance=True
+MainMenu_C.Input=True
+MainMenu_C.Interaction=True
+MainMenu_C.Designer=True
+MainMenu_C.Performance=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Localization=True
+MainMenu_C.Accessibility=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+ThirdPersonMap_C.Tick=True
+ThirdPersonMap_C.Replication=True
+ThirdPersonMap_C.Actor=True
+ThirdPersonMap_C.Input=True
+ThirdPersonMap_C.HLOD=True
+ThirdPersonMap_C.Physics=True
+ThirdPersonMap_C.WorldPartition=True
+ThirdPersonMap_C.Events=True
+SoundMenu_C.Default=True
+SoundMenu_C.Appearance=True
+SoundMenu_C.Input=True
+SoundMenu_C.Interaction=True
+SoundMenu_C.Designer=True
+SoundMenu_C.Performance=True
+SoundMenu_C.Layout=True
+SoundMenu_C.Behavior=True
+SoundMenu_C.Render Transform=True
+SoundMenu_C.Localization=True
+SoundMenu_C.Accessibility=True
+SoundMenu_C.Clipping=True
+SoundMenu_C.Navigation=True
+StartingScreen_C.Default=True
+EdGraph.Graph=True
+SaveGame_C.Default=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2167,29 +2421,29 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Assets/Sound/miaou_RACvkaU
-MRUItem1=/Game/Cats/Assets/Sound/miaou_Cue
-MRUItem2=/Game/Cats/Assets/Sound/miaouCourt
-MRUItem3=/Game/Cats/Assets/Sound/VoiceSoundMix
-MRUItem4=/Game/Cats/Assets/Sound/SFXSoundMix
-MRUItem5=/Game/Cats/Assets/Sound/MasterSoundMix
-MRUItem6=/Game/Cats/Assets/Sound/MusicSoundMix
-MRUItem7=/Game/Cats/Assets/Sound/MasterSoundMix_3
-MRUItem8=/Game/Cats/Assets/Sound/miaou
-MRUItem9=/Game/Cats/Assets/Sound/NewSoundMix
-MRUItem10=/Game/Cats/Assets/Sound/miaou_RACvkaU_Cue
-MRUItem11=/Game/ThirdPerson/Input/Actions/Miaou
-MRUItem12=/Game/ThirdPerson/Input/Actions/Interact
-MRUItem13=/Game/ThirdPerson/Input/Actions/Attack2
-MRUItem14=/Game/ThirdPerson/Input/Actions/Attack1
-MRUItem15=/Game/ThirdPerson/Input/IMC_Default
-MRUItem16=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem17=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem19=/Game/Cats/GameMode/MyPlayerController
+MRUItem0=/Game/Cats/Blueprint/SaveGame
+MRUItem1=/Game/Cats/Assets/Sound/MusicSoundMix
+MRUItem2=/Game/Cats/Map/StartingScreen
+MRUItem3=/Game/Cats/GameMode/MyGameMode
+MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem5=/Game/Cats/Widget/SoundMenu
+MRUItem6=/Game/Cats/Map/StartingScreenGameMode
+MRUItem7=/Game/Cats/Assets/Picture/DemonCat
+MRUItem8=/Game/Cats/Widget/Menu
+MRUItem9=/Game/Cats/Assets/Sound/miaou_RACvkaU
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem11=/Game/Cats/Assets/Sound/miaouCourt
+MRUItem12=/Game/Cats/Assets/Sound/miaou_Cue
+MRUItem13=/Game/Cats/Blueprint/Cat
+MRUItem14=/Game/Cats/Assets/Sound/VoiceSoundMix
+MRUItem15=/Game/Cats/Assets/Sound/SFXSoundMix
+MRUItem16=/Game/Cats/Assets/Sound/MasterSoundMix
+MRUItem17=/Game/Cats/Assets/Sound/MasterSoundMix_3
+MRUItem18=/Game/Cats/Assets/Sound/miaou
+MRUItem19=/Game/Cats/Assets/Sound/NewSoundMix
 
 [MaterialEditor]
 PrimType=1
@@ -2373,6 +2627,10 @@ bMaterialQualityUsed[3]=0
 /Game/Cats/Assets/Sound/miaou_Cue.miaou_Cue=0
 /Game/Cats/GameMode/MyGameMode.MyGameMode=0
 /Game/Cats/GameMode/MyPlayerController.MyPlayerController=0
+/Game/Cats/Map/StartingScreenGameMode.StartingScreenGameMode=0
+/Game/Cats/Map/StartingScreen.StartingScreen:PersistentLevel.StartingScreen=0
+/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap:PersistentLevel.ThirdPersonMap=0
+/Game/Cats/Blueprint/SaveGame.SaveGame=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -2428,7 +2686,132 @@ RecentlyPlaced=/Game/Cats/Blueprint/Cat.Cat;
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 MovieSceneToolsProjectSettings=True
+AssetManagerSettings=True
+GameMapsSettings=True
+CryptoKeysSettings=True
 
 [DetailCategoriesAdvanced]
 CharacterMovementComponent.Character Movement: Walking=False
+TextBlock.Appearance=False
+Border.Appearance=False
+Button.Accessibility=False
+Button.Behavior=False
+GameMapsSettings.DefaultModes=False
+Slider.Behavior=False
+Slider.Appearance=False
+Slider.Accessibility=False
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoSaveMaxBackups=10
+AutoSaveMethod=BackupAndRestore
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
+
+[WidgetTemplatesExpanded]
+Audio=False
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=True
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
+
+[UMGEditor.Designer]
+bCommonResolutionSelected=False
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToSections=False
+bSnapPlayTimeToMarkers=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=False
+bShowSelectedNodesOnly=False
+bRewindOnRecord=False
+bLeftMouseDragDoesMarquee=False
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bResetPlayheadWhenNavigating=False
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+JumpFrameIncrement=(Value=5)
+bShowLayerBars=True
+bShowKeyBars=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bShowStatusBar=True
+bShowTickLines=True
+bShowSequencerToolbar=True
+KeyAreaCurveExtents=
+KeyAreaHeightWithCurves=15.000000
+ReduceKeysTolerance=0.000100
+bDeleteKeysWhenTrimming=True
+bDisableSectionsAfterBaking=True
+SectionColorTints=(B=142,G=102,R=88,A=255)
+SectionColorTints=(B=132,G=137,R=99,A=255)
+SectionColorTints=(B=92,G=127,R=110,A=255)
+SectionColorTints=(B=102,G=142,R=151,A=255)
+SectionColorTints=(B=101,G=119,R=147,A=255)
+SectionColorTints=(B=108,G=95,R=139,A=255)
+SectionColorTints=(B=121,G=74,R=109,A=255)
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+FrameNumberDisplayFormat=Seconds
+MovieRendererName=
+bAutoExpandNodesOnSelection=True
+TreeViewWidth=0.300000
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=False
 
