--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Input
+ContentBrowserTab1.SelectedPaths=/Game/Cats/Blueprint
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -287,14 +287,14 @@ FbxImportUI="\"Object\" "
 PreviewMaterial="\"Object\" "
 Material="\"Object\" "
 MaterialInterface="\"Object\" "
-SkeletalMeshComponent="\"Object\" "
-SkinnedMeshComponent="\"Object\" "
-MeshComponent="\"Object\" "
-PrimitiveComponent="\"Object\" "
+SkeletalMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+SkinnedMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-CapsuleComponent="\"Object\" "
-ShapeComponent="\"Object\" "
+CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" "
 MaterialExpressionTextureSample="\"Object\" "
 MaterialExpressionTextureBase="\"Object\" "
 MaterialExpression="\"Object\" "
@@ -308,7 +308,7 @@ NavMovementComponent="\"Object\" "
 MovementComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[22]\" \"Object.Mappings.Mappings.Mappings[23]\" \"Object.Mappings.Mappings.Mappings[24]\" "
 FileMediaSource="\"Object\" "
 BaseMediaSource="\"Object\" "
 MediaSource="\"Object\" "
@@ -332,11 +332,7 @@ ArrowComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/Cats/GameMode/MyGameMode.MyGameMode
-OpenAssetsAtExit=/Game/Cats/Blueprint/InteractExemple.InteractExemple
-OpenAssetsAtExit=/Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -1419,8 +1415,8 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance,InputMappingContext.Mappings.ActionMappings.None
-InputAction=
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings.None
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings.None
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 Cat_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
@@ -1428,6 +1424,12 @@ InteractExemple_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 SceneComponent=
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 SpringArmComponent=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+Blueprint=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+BP_Entity_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+BP_Parent_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+BP_Enfant_C=
+K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2136,6 +2138,48 @@ InteractExemple_C.TransformCommon=True
 InteractExemple_C.Networking=True
 K2Node_CallFunction.Inputs=True
 K2Node_CallFunction.Outputs=True
+BP_Entity_C.Tick=True
+BP_Entity_C.Replication=True
+BP_Entity_C.Rendering=True
+BP_Entity_C.Collision=True
+BP_Entity_C.Actor=True
+BP_Entity_C.Input=True
+BP_Entity_C.HLOD=True
+BP_Entity_C.Physics=True
+BP_Entity_C.WorldPartition=True
+BP_Entity_C.Events=True
+BP_Parent_C.Default=True
+BP_Parent_C.Tick=True
+BP_Parent_C.Replication=True
+BP_Parent_C.Rendering=True
+BP_Parent_C.Collision=True
+BP_Parent_C.Actor=True
+BP_Parent_C.Input=True
+BP_Parent_C.HLOD=True
+BP_Parent_C.Physics=True
+BP_Parent_C.WorldPartition=True
+BP_Parent_C.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+BP_Parent_C.TransformCommon=True
+BP_Parent_C.Networking=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Events=True
+BP_Enfant_C.Default=True
+BP_Enfant_C.Tick=True
+BP_Enfant_C.Replication=True
+BP_Enfant_C.Rendering=True
+BP_Enfant_C.Collision=True
+BP_Enfant_C.Actor=True
+BP_Enfant_C.Input=True
+BP_Enfant_C.HLOD=True
+BP_Enfant_C.Physics=True
+BP_Enfant_C.WorldPartition=True
+BP_Enfant_C.Events=True
+BP_Enfant_C.TransformCommon=True
+BP_Enfant_C.Networking=True
+SkeletalMeshComponent.SkeletalMesh=True
+K2Node_CallParentFunction.Graph=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2254,25 +2298,25 @@ LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPerson/Input/IMC_Default
-MRUItem1=/Game/ThirdPerson/Input/Actions/CameraDistance
+MRUItem1=/Game/Cats/Blueprint/BP_Enfant
 MRUItem2=/Game/Cats/Blueprint/InteractExemple
-MRUItem3=/Game/Cats/GameMode/MyGameMode
-MRUItem4=/Game/Cats/Blueprint/Interfaces/damageable
-MRUItem5=/Game/Cats/Blueprint/Interfaces/interactable
-MRUItem6=/Game/Cats/Blueprint/Interfaces/interact
-MRUItem7=/Game/Cats/Blueprint/Cat
-MRUItem8=/Game/Cats/Blueprint/Interfaces/interact_2
-MRUItem9=/Game/Cats/Assets/Sound/miaou_RACvkaU
-MRUItem10=/Game/Cats/Assets/Sound/miaou_Cue
-MRUItem11=/Game/Cats/Assets/Sound/miaouCourt
-MRUItem12=/Game/Cats/Assets/Sound/VoiceSoundMix
-MRUItem13=/Game/Cats/Assets/Sound/SFXSoundMix
-MRUItem14=/Game/Cats/Assets/Sound/MasterSoundMix
-MRUItem15=/Game/Cats/Assets/Sound/MusicSoundMix
-MRUItem16=/Game/Cats/Assets/Sound/MasterSoundMix_3
-MRUItem17=/Game/Cats/Assets/Sound/miaou
-MRUItem18=/Game/Cats/Assets/Sound/NewSoundMix
-MRUItem19=/Game/Cats/Assets/Sound/miaou_RACvkaU_Cue
+MRUItem3=/Game/Cats/Blueprint/Cat
+MRUItem4=/Game/Cats/Blueprint/BP_Parent
+MRUItem5=/Game/Cats/Blueprint/BP_Entity
+MRUItem6=/Game/ThirdPerson/Input/Actions/CameraDistance
+MRUItem7=/Game/Cats/GameMode/MyGameMode
+MRUItem8=/Game/Cats/Blueprint/Interfaces/damageable
+MRUItem9=/Game/Cats/Blueprint/Interfaces/interactable
+MRUItem10=/Game/Cats/Blueprint/Interfaces/interact
+MRUItem11=/Game/Cats/Blueprint/Interfaces/interact_2
+MRUItem12=/Game/Cats/Assets/Sound/miaou_RACvkaU
+MRUItem13=/Game/Cats/Assets/Sound/miaou_Cue
+MRUItem14=/Game/Cats/Assets/Sound/miaouCourt
+MRUItem15=/Game/Cats/Assets/Sound/VoiceSoundMix
+MRUItem16=/Game/Cats/Assets/Sound/SFXSoundMix
+MRUItem17=/Game/Cats/Assets/Sound/MasterSoundMix
+MRUItem18=/Game/Cats/Assets/Sound/MusicSoundMix
+MRUItem19=/Game/Cats/Assets/Sound/MasterSoundMix_3
 
 [MaterialEditor]
 PrimType=1
@@ -2463,6 +2507,9 @@ bMaterialQualityUsed[3]=0
 /Game/Cats/Blueprint/Cat.Cat=0
 /Game/Cats/Blueprint/InteractExemple.InteractExemple=0
 /Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance=0
+/Game/Cats/Blueprint/BP_Entity.BP_Entity=0
+/Game/Cats/Blueprint/BP_Parent.BP_Parent=0
+/Game/Cats/Blueprint/BP_Enfant.BP_Enfant=0
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -2513,6 +2560,8 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Cats/Blueprint/BP_Enfant.BP_Enfant;
+RecentlyPlaced=/Game/Cats/Blueprint/BP_Parent.BP_Parent;
 RecentlyPlaced=/Game/Cats/Blueprint/InteractExemple.InteractExemple;
 RecentlyPlaced=/Game/Cats/Blueprint/Cat.Cat;
 
