Add Enemies as pawn

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -290,7 +290,7 @@ MaterialInterface="\"Object\" "
 SkeletalMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SkinnedMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 MeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+PrimitiveComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" "
@@ -329,11 +329,15 @@ Pawn="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 ArrowComponent="\"Object\" "
-StaticMeshComponent="\"Object\" "
+StaticMeshComponent="\"Object\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+BaseEntity_C="\"Object\" "
+Dogs_C="\"Object\" "
+Mouse_C="\"Object\" "
+Children_C="\"Object\" "
+Adults_C="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1415,8 +1419,8 @@ bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
 
 [DetailCustomWidgetExpansion]
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings.None
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings.None
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Miaou.Miaou,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/CameraDistance.CameraDistance,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack1.Attack1,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Attack2.Attack2,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/Interact.Interact,InputMappingContext.Mappings.ActionMappings.None
+InputAction=
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 Cat_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
@@ -1430,6 +1434,11 @@ BP_Parent_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 BP_Enfant_C=
 K2Node_Variable=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+BP_Dogs_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+BP_mouse_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+BaseEntity_C=
+Dogs_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
+Mouse_C=K2Node_VariableGet.DefaultValueCategory.ArrowComponent
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2180,6 +2189,101 @@ BP_Enfant_C.TransformCommon=True
 BP_Enfant_C.Networking=True
 SkeletalMeshComponent.SkeletalMesh=True
 K2Node_CallParentFunction.Graph=True
+BP_Dogs_C.Default=True
+BP_Dogs_C.Tick=True
+BP_Dogs_C.Replication=True
+BP_Dogs_C.Rendering=True
+BP_Dogs_C.Collision=True
+BP_Dogs_C.Actor=True
+BP_Dogs_C.Input=True
+BP_Dogs_C.HLOD=True
+BP_Dogs_C.Physics=True
+BP_Dogs_C.WorldPartition=True
+BP_Dogs_C.Events=True
+BP_mouse_C.Default=True
+BP_mouse_C.Tick=True
+BP_mouse_C.Replication=True
+BP_mouse_C.Rendering=True
+BP_mouse_C.Collision=True
+BP_mouse_C.Actor=True
+BP_mouse_C.Input=True
+BP_mouse_C.HLOD=True
+BP_mouse_C.Physics=True
+BP_mouse_C.WorldPartition=True
+BP_mouse_C.Events=True
+BP_mouse_C.TransformCommon=True
+BP_mouse_C.Networking=True
+BP_Dogs_C.TransformCommon=True
+BP_Dogs_C.Networking=True
+BP_Entity_C.Default=True
+BaseEntity_C.Pawn=True
+BaseEntity_C.Tick=True
+BaseEntity_C.Camera=True
+BaseEntity_C.Replication=True
+BaseEntity_C.Rendering=True
+BaseEntity_C.Collision=True
+BaseEntity_C.Actor=True
+BaseEntity_C.Input=True
+BaseEntity_C.HLOD=True
+BaseEntity_C.Physics=True
+BaseEntity_C.WorldPartition=True
+BaseEntity_C.Events=True
+Dogs_C.Default=True
+Dogs_C.Tick=True
+Dogs_C.Pawn=True
+Dogs_C.Camera=True
+Dogs_C.Replication=True
+Dogs_C.Rendering=True
+Dogs_C.Collision=True
+Dogs_C.Actor=True
+Dogs_C.Input=True
+Dogs_C.HLOD=True
+Dogs_C.Physics=True
+Dogs_C.WorldPartition=True
+Dogs_C.Events=True
+Mouse_C.Default=True
+Mouse_C.Tick=True
+Mouse_C.Pawn=True
+Mouse_C.Camera=True
+Mouse_C.Replication=True
+Mouse_C.Rendering=True
+Mouse_C.Collision=True
+Mouse_C.Actor=True
+Mouse_C.Input=True
+Mouse_C.HLOD=True
+Mouse_C.Physics=True
+Mouse_C.WorldPartition=True
+Mouse_C.Events=True
+Children_C.Default=True
+Children_C.Tick=True
+Children_C.Pawn=True
+Children_C.Camera=True
+Children_C.Replication=True
+Children_C.Rendering=True
+Children_C.Collision=True
+Children_C.Actor=True
+Children_C.Input=True
+Children_C.HLOD=True
+Children_C.Physics=True
+Children_C.WorldPartition=True
+Children_C.Events=True
+Adults_C.Default=True
+Adults_C.Tick=True
+Adults_C.Pawn=True
+Adults_C.Camera=True
+Adults_C.Replication=True
+Adults_C.Rendering=True
+Adults_C.Collision=True
+Adults_C.Actor=True
+Adults_C.Input=True
+Adults_C.HLOD=True
+Adults_C.Physics=True
+Adults_C.WorldPartition=True
+Adults_C.Events=True
+Dogs_C.TransformCommon=True
+Dogs_C.Networking=True
+Mouse_C.TransformCommon=True
+Mouse_C.Networking=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2297,26 +2401,26 @@ bConvertSceneUnit=False
 LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Input/IMC_Default
-MRUItem1=/Game/Cats/Blueprint/BP_Enfant
-MRUItem2=/Game/Cats/Blueprint/InteractExemple
-MRUItem3=/Game/Cats/Blueprint/Cat
-MRUItem4=/Game/Cats/Blueprint/BP_Parent
-MRUItem5=/Game/Cats/Blueprint/BP_Entity
-MRUItem6=/Game/ThirdPerson/Input/Actions/CameraDistance
-MRUItem7=/Game/Cats/GameMode/MyGameMode
-MRUItem8=/Game/Cats/Blueprint/Interfaces/damageable
-MRUItem9=/Game/Cats/Blueprint/Interfaces/interactable
-MRUItem10=/Game/Cats/Blueprint/Interfaces/interact
-MRUItem11=/Game/Cats/Blueprint/Interfaces/interact_2
-MRUItem12=/Game/Cats/Assets/Sound/miaou_RACvkaU
-MRUItem13=/Game/Cats/Assets/Sound/miaou_Cue
-MRUItem14=/Game/Cats/Assets/Sound/miaouCourt
-MRUItem15=/Game/Cats/Assets/Sound/VoiceSoundMix
-MRUItem16=/Game/Cats/Assets/Sound/SFXSoundMix
-MRUItem17=/Game/Cats/Assets/Sound/MasterSoundMix
-MRUItem18=/Game/Cats/Assets/Sound/MusicSoundMix
-MRUItem19=/Game/Cats/Assets/Sound/MasterSoundMix_3
+MRUItem0=/Game/Cats/Blueprint/Adults
+MRUItem1=/Game/Cats/Blueprint/BP_Parent
+MRUItem2=/Game/Cats/Blueprint/BP_Enfant
+MRUItem3=/Game/Cats/Blueprint/Children
+MRUItem4=/Game/Cats/Blueprint/Dogs
+MRUItem5=/Game/Cats/Blueprint/BaseEntity
+MRUItem6=/Game/Cats/Blueprint/BP_Entity
+MRUItem7=/Game/Cats/Blueprint/InteractExemple
+MRUItem8=/Game/Cats/Blueprint/BP_Dogs
+MRUItem9=/Game/Cats/Blueprint/BP_mouse
+MRUItem10=/Game/ThirdPerson/Input/IMC_Default
+MRUItem11=/Game/Cats/Blueprint/Cat
+MRUItem12=/Game/ThirdPerson/Input/Actions/CameraDistance
+MRUItem13=/Game/Cats/GameMode/MyGameMode
+MRUItem14=/Game/Cats/Blueprint/Interfaces/damageable
+MRUItem15=/Game/Cats/Blueprint/Interfaces/interactable
+MRUItem16=/Game/Cats/Blueprint/Interfaces/interact
+MRUItem17=/Game/Cats/Blueprint/Interfaces/interact_2
+MRUItem18=/Game/Cats/Assets/Sound/miaou_RACvkaU
+MRUItem19=/Game/Cats/Assets/Sound/miaou_Cue
 
 [MaterialEditor]
 PrimType=1
@@ -2510,9 +2614,16 @@ bMaterialQualityUsed[3]=0
 /Game/Cats/Blueprint/BP_Entity.BP_Entity=0
 /Game/Cats/Blueprint/BP_Parent.BP_Parent=0
 /Game/Cats/Blueprint/BP_Enfant.BP_Enfant=0
+/Game/Cats/Blueprint/BP_Dogs.BP_Dogs=0
+/Game/Cats/Blueprint/BP_mouse.BP_mouse=0
+/Game/Cats/Blueprint/BaseEntity.BaseEntity=0
+/Game/Cats/Blueprint/Dogs.Dogs=0
+/Game/Cats/Blueprint/Mouse.Mouse=0
+/Game/Cats/Blueprint/Children.Children=0
+/Game/Cats/Blueprint/Adults.Adults=0
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2560,6 +2671,10 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Cats/Blueprint/Mouse.Mouse;
+RecentlyPlaced=/Game/Cats/Blueprint/Dogs.Dogs;
+RecentlyPlaced=/Game/Cats/Blueprint/BP_Dogs.BP_Dogs;
+RecentlyPlaced=/Game/Cats/Blueprint/BP_mouse.BP_mouse;
 RecentlyPlaced=/Game/Cats/Blueprint/BP_Enfant.BP_Enfant;
 RecentlyPlaced=/Game/Cats/Blueprint/BP_Parent.BP_Parent;
 RecentlyPlaced=/Game/Cats/Blueprint/InteractExemple.InteractExemple;
