--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -154,7 +154,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeSubstrate=0,VisualizeGroom=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,VisualizeReprojection=0,VisualizeTemporalUpscaler=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,Cloud=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeVolumetricCloudEmptySpaceSkipping=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,DebugDrawDistantVirtualSMLights=0,VirtualTextureResidency=1,InputDebugVisualizer=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenShortRangeAmbientOcclusion=1,VisualizeGPUSkinCache=0,ShaderPrint=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",StrataVisualizationMode="",GroomVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",GPUSkinCacheVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Cats/Blueprint
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Maps
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -328,14 +328,14 @@ SoundNodeRandom="\"Object\" \"Object.Random.Weights\" "
 Border="\"Object\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 PanelWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-Widget="\"Object\" "
-Visual="\"Object\" "
+Widget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Visual="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Menu_C="\"Object\" "
-UserWidget="\"Object\" "
+UserWidget="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Button="\"Object\" \"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 CanvasPanel="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
-TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Layout.Slot.Object.Layout.Layout|Overlay Slot.Padding\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 Texture2D="\"Object\" "
 Texture="\"Object\" "
@@ -373,13 +373,11 @@ FracturePlaneCutSettings="\"Object\" "
 FractureTransformGizmoSettings="\"Object\" "
 FractureRadialSettings="\"Object\" "
 LandscapeEditorObject="\"Object\" "
+ProgressBar="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
+Karma_C="\"Object\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransformPivot\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Cats/Blueprint/Breakable.Breakable
-OpenAssetsAtExit=/Game/Cats/Blueprint/CatStrainField.CatStrainField
-OpenAssetsAtExit=/Game/Cats/Blueprint/Cat.Cat
-OpenAssetsAtExit=/Game/Cats/Blueprint/Adults.Adults
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1468,9 +1466,9 @@ InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingCont
 InputAction=
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
-GeometryCollectionComponent=
+GeometryCollectionComponent=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
 Breakable_C=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
-SceneComponent=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
+SceneComponent=
 BillboardComponent=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
 K2Node_VariableGet=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
 SphereComponent=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
@@ -1483,6 +1481,9 @@ StaticMeshActor=GeometryCollectionComponent.Materials.MaterialList,GeometryColle
 Cat_C=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
 SkeletalMeshComponent=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
 CapsuleComponent=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision,CapsuleComponent.Collision.Collision
+Eggs_C=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
+K2Node=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
+K2Node_VariableSet=GeometryCollectionComponent.Materials.MaterialList,GeometryCollectionComponent.Physics.ConstraintsGroup,GeometryCollectionComponent.Collision.Collision
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -2681,6 +2682,37 @@ CatStrainField_C.Actor=True
 CatStrainField_C.Input=True
 CatStrainField_C.WorldPartition=True
 CatStrainField_C.Events=True
+Eggs_C.Default=True
+Eggs_C.TransformCommon=True
+Eggs_C.Networking=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+Karma_C.Appearance=True
+Karma_C.Input=True
+Karma_C.Interaction=True
+Karma_C.Designer=True
+Karma_C.Performance=True
+Karma_C.Layout=True
+Karma_C.Behavior=True
+Karma_C.Render Transform=True
+Karma_C.Localization=True
+Karma_C.Accessibility=True
+Karma_C.Clipping=True
+Karma_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+Eggs_C.Cooking=True
+K2Node_Message.Graph=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -2798,26 +2830,26 @@ bConvertSceneUnit=False
 LastLogListing=BlueprintLog
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Cats/Blueprint/CatStrainField
-MRUItem1=/Game/Cats/Blueprint/Adults
-MRUItem2=/Game/Cats/Blueprint/Cat
-MRUItem3=/Game/Cats/Blueprint/CameraBreakable
-MRUItem4=/Game/Cats/Blueprint/Breakable
-MRUItem5=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem6=/Game/Cats/Blueprint/NewBlueprint
-MRUItem7=/Game/Cats/Assets/Oculus_GC/GC_Oculus
-MRUItem8=/Game/Cats/Blueprint/BaseEntity
-MRUItem9=/Game/Cats/Blueprint/Eggs
-MRUItem10=/Game/Cats/Blueprint/MainLibrary
-MRUItem11=/Game/Cats/Blueprint/Mouse
-MRUItem12=/Game/Cats/Blueprint/Interfaces/interactable
-MRUItem13=/Game/Cats/Blueprint/Ballon
-MRUItem14=/Game/Cats/Blueprint/SaveGame
-MRUItem15=/Game/Cats/Assets/Sound/MusicSoundMix
-MRUItem16=/Game/Cats/Map/StartingScreen
-MRUItem17=/Game/Cats/GameMode/MyGameMode
-MRUItem18=/Game/Cats/Widget/SoundMenu
-MRUItem19=/Game/Cats/Map/StartingScreenGameMode
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Cats/Map/StartingScreen
+MRUItem2=/Game/Cats/Blueprint/MainLibrary
+MRUItem3=/Game/Cats/Blueprint/Interfaces/damageable
+MRUItem4=/Game/Cats/Widget/Karma
+MRUItem5=/Game/Cats/Blueprint/Eggs
+MRUItem6=/Game/Cats/Blueprint/CatStrainField
+MRUItem7=/Game/Cats/Blueprint/Cat
+MRUItem8=/Game/Cats/Blueprint/Breakable
+MRUItem9=/Game/Cats/Blueprint/Adults
+MRUItem10=/Game/Cats/Blueprint/CameraBreakable
+MRUItem11=/Game/Cats/Blueprint/NewBlueprint
+MRUItem12=/Game/Cats/Assets/Oculus_GC/GC_Oculus
+MRUItem13=/Game/Cats/Blueprint/BaseEntity
+MRUItem14=/Game/Cats/Blueprint/Mouse
+MRUItem15=/Game/Cats/Blueprint/Interfaces/interactable
+MRUItem16=/Game/Cats/Blueprint/Ballon
+MRUItem17=/Game/Cats/Blueprint/SaveGame
+MRUItem18=/Game/Cats/Assets/Sound/MusicSoundMix
+MRUItem19=/Game/Cats/GameMode/MyGameMode
 
 [MaterialEditor]
 PrimType=1
@@ -3066,6 +3098,7 @@ bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
 
 [PlacementMode]
+RecentlyPlaced=/Game/Cats/Blueprint/Eggs.Eggs;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/Cats/Assets/Cat/cat_fbx.cat_fbx;
 RecentlyPlaced=/Game/Cats/Blueprint/CameraBreakable.CameraBreakable;
@@ -3094,6 +3127,7 @@ GameMapsSettings.DefaultModes=False
 Slider.Behavior=False
 Slider.Appearance=False
 Slider.Accessibility=False
+GeometryCollectionComponent.Physics=False
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoSaveMaxBackups=10
