--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 Saved/Logs/ProjectCats.log
 Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+Saved/Config/WindowsEditor/Input.ini
+Saved/Config/WindowsEditor/Engine.ini
+Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+Saved/AutoScreenshot.png
